@@ -1,5 +1,7 @@
 package FusionInventory::Agent::Task::WakeOnLan;
 
+# Keep this line, used by getVersionFromTaskModuleFile
+# VERSION FROM Agent.pm
 use strict;
 use warnings;
 use base 'FusionInventory::Agent::Task::Base';
